# lipsum

./: .gitignore  IMPLEMENTATION.md  LICENSE.md  Makefile  README.md  dune  jbuild  lipsum.1  lipsum.descr  lipsum.ml  lipsum.opam  lipsum.pod  litprog.ml  litprog.mli  opam  parser.mly  scanner.mll  syntax.ml  tangle.ml  tangle.mli  utilities.ml  weave.ml  weave.mli
examples/: Makefile  echo.lp  sortlines.html  sortlines.lp  sortlines.md
src/: _tags  dune  jbuild  lipsum.ml  litprog.ml  litprog.mli  main.ml  scanner.mll  tangle.ml  tangle.mli  weave.ml  weave.mli
test/: foo.lp  test.lp
